# Puffer-Soccer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  railway.json  resources  setup.py
configs/: sokoban_envs.json
experiments/: best_checkpoint.json  no_warmstart_autoload_hyperparameters.json  no_warmstart_tuner_runtime.json  no_warmstart_vecenv_autoload.json
sbatch/: __init__.py  gpu_heartbeat.py  nanocode.py  run_train_variant.sh  run_tune_self_play_variant.sh  srun-no-gpu.sh  srun.sh  submit_all_tunes.sh  train_automode.sbatch  train_fictitious_play_kl_off.sbatch  train_fictitious_play_kl_on.sbatch  train_league_kl_off.sbatch  train_league_kl_on.sbatch  train_self_play_kl_off.sbatch  train_self_play_kl_on.sbatch  train_self_play_v2.sbatch  tune_fictitious_play_kl_off.sbatch  tune_fictitious_play_kl_on.sbatch  tune_league_kl_off.sbatch  tune_league_kl_on.sbatch  tune_marlodonna_kl_off.sbatch  tune_marlodonna_kl_on.sbatch  tune_self_play_kl_off.sbatch  tune_self_play_kl_on.sbatch  tune_warmstart.sbatch  watch_sbatch_job.sh
scripts/: _diag_scoring.py  _make_repl_final_cache.py  _record_self_play_video.py  _record_warmstart_videos.py  _verify_obs.py  action_mix_sweep.py  benchmark_sps.py  eval_policy_bundle.py  export_best_model_bundle.py  extract_behavior_clips.py  extract_dribble_pass_clips.py  extract_goalie_transition_clips.py  finalize_no_opponent_results.py  formation_value_goalie_delta.py  formation_value_heatmap.py  gepa_evaluate.py  goalie_save_region.py  pass_heatmap.py  plot_emergence_individual.py  plot_setting_fov.py  (+23 more)
(+390 files in other folders)
