[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.26"]
build-backend = "setuptools.build_meta"

[project]
name = "puffer-soccer"
version = "0.1.0"
description = "Native PufferLib MARL soccer environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "imageio-ffmpeg>=0.5",
  "numpy>=1.26",
  "pygame>=2.5",
  "gymnasium>=0.29.1",
  "pufferlib>=3.0,<3.1",
  "wandb>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
